@@ -1117,11 +1117,10 @@ function parseBrowseResp(data, parent, options, cacheKey, parentCommand, parentG
                 }
                 let group = "ALBUM";
                 if (lmsOptions.groupByReleaseType>0) {
-                    let roles = new Set(undefined==i.role_ids ? [] : splitIntArray(i.role_ids));
-                    if (undefined!=i.compilation && 1==parseInt(i.compilation)) {
-                        group = "COMPILATION";
-                    } else if (intersect(ARTIST_ROLES, roles).size>0 || roles.size==0) {
-                            group = undefined==i.release_type ? "ALBUM" : i.release_type.toUpperCase();
+                    let roles = new Set(isEmpty(i.role_ids) ? [] : splitIntArray(i.role_ids));
+
+                    if (intersect(ARTIST_ROLES, roles).size>0 || roles.size==0) {
+                        group = undefined==i.release_type ? i.compilation && 1==parseInt(i.compilation) ? "COMPILATION" : "ALBUM" : i.release_type.toUpperCase();
                     } else {
                         let paramRoles = new Set(undefined==roleId ? [] : splitIntArray(roleId));
                         roles = intersect(roles, paramRoles).size>0 ? paramRoles : roles; // prioritise parameter roles in release group roles allocation.
